plugins {
    id 'java'
    id 'jacoco'
}

repositories {
    mavenCentral()
}

sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.1'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

test {
    useJUnitPlatform()
    finalizedBy jacocoTestReport // report is always generated after tests run
    jvmArgs += [
            '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
    ]
}

jacocoTestReport {
    dependsOn test // tests are required to run before generating the report
    reports {
        html.required.set(false)
        csv.required.set(false)
        xml.required.set(true)
    }
}